--- a/project-6/index.html
+++ b/project-6/index.html
@@ -42,18 +42,23 @@
             Product Price
             <br>
             <input type="number" id="productPrice" name="productPrice" value=1>ETH<br>
-            Distributor ID
+            WareHouse ID
             <br>
-            <input type="text" id="distributorID" name="distributorID" value="0xf1b1bcd24dad92303dd9fe78be639f7bcf9c238d"
+            <input type="text" id="wareHouseID" name="wareHouseID" value=""
                 size="50">
             <br>
-            Retailer ID
-            <br>
-            <input type="text" id="retailerID" name="retailerID" value="0x0fb2bfefd526966c87efa19f6693d50971763fc2"
-                size="50"><br>
             Distributor ID
             <br>
-            <input type="text" id="consumerID" name="consumerID" value="0x5d777e9127b28fb119e81a6304278a0a21bef1c4"
+            <input type="text" id="distributorID" name="distributorID" value=""
+                    size="50">    
+            <br>
+            Pharmacy ID
+            <br>
+            <input type="text" id="pharmacyID" name="pharmacyID" value=""
+                size="50"><br>
+            ConsumerID
+            <br>
+            <input type="text" id="consumerID" name="consumerID" value=""
                 size="50"><br>
             <br>
             <button class="btn-add" id="button" type="button" data-id="1">Add</button>
